# django-rest-framework-apptest

./: .gitignore  README.md  movie_db  movies.xlsx  pyproject.toml  test_upload.html
core/: settings.py  urls.py
movies/: models.py  serializers.py  views.py
movies/migrations/: 0001_initial.py  0002_remove_director_birth_date_director_birth_year.py
